test/error/function_nested.gw
function void test()
{
<<<"this will fail">>>;
  function void nested(){}
}
